# AutoRocq

./: .gitignore  .gitmodules  LICENSE  README.md  deps.opam  requirement.txt
dockerfile/ours/: agent.dockerfile
eval/final/: complexity-coqgym-sample.csv  complexity-svcomp.csv  complexity-verker.csv  results-coqgym.csv  results-svcomp.csv  searches.txt
proof-search/: main.py  run_tests.py
proof-search/agent/: context_manager.py  context_search.py  history_recorder.py  proof_controller.py  proof_tree.py
proof-search/backend/: coq_interface.py
proof-search/configs/: default_config.json  minimal.json  proving_example.txt  readme.md
proof-search/coqpyt/coq/: base_file.py  proof_file.py  structs.py
proof-search/coqpyt/lsp/: __init__.py  client.py  endpoint.py  structs.py
proof-search/coqpyt/tests/: test_coq_file.py  test_coq_lsp_client.py
proof-search/coqpyt/tests/proof_file/: test_changes.py  test_proof_file.py  utility.py
proof-search/examples/: Makefile  example.v  main_assert.v  main_assert_reachability.v  main_assert_rte_signed_overflow.v  main_loop_invariant_2_established_Coq.v
proof-search/tests/: test_context_search.py  test_context_search_entries.py  test_controller_prove.py  test_coq_interface.py  test_coq_interface_queries.py  test_coqpyt.py  test_coqpyt_simple.py  test_coqpyt_svcomp.py  test_coqpyt_svcomp_clean.py  test_direct_tactics.py  test_extract_proof_content.py  test_folder_batch.py  test_get_similar_history.py  test_llm_tactic_generator.py  test_proof_tree_step_by_step.py  test_rollback.py  test_state_manager.py  test_subgoals.py  test_svcomp.py  test_svcomp_llm.py  test_tactic_history.py  test_utils.py
proof-search/utils/: config.py  coq_utils.py  logger.py  recorder.py
scripts/: get_results.py
scripts/analyze/: draw_complexity.py  draw_results.py  plot_searches.py
