opam-version: "2.0"
compiler: ["ocaml-base-compiler.4.14.0"]
roots: [
  "coq.8.18.0"
  "coq-core.8.18.0"
  "coq-lsp.0.1.9+8.18"
  "coq-mathcomp-ssreflect.1.19.0"
  "coq-serapi.8.18.0+0.18.3"
  "coq-stdlib.8.18.0"
  "coqide.8.18.0"
  "coqide-server.8.18.0"
  "dune.3.19.1"
  "frama-c.30.0"
  "ocaml-base-compiler.4.14.0"
  "why3.1.7.1"
  "why3-coq.1.7.1"
  "z3.4.8.5"
]
installed: [
  "alt-ergo.2.6.2"
  "alt-ergo-lib.2.6.2"
  "alt-ergo-parsers.2.6.2"
  "angstrom.0.16.1"
  "astring.0.8.5"
  "base.v0.16.4"
  "base-bigarray.base"
  "base-threads.base"
  "base-unix.base"
  "bigarray-compat.1.1.0"
  "bigstringaf.0.10.0"
  "bos.0.2.1"
  "cairo2.0.6.5"
  "camlp-streams.5.0.1"
  "camlzip.1.13"
  "cmdliner.1.3.0"
  "conf-adwaita-icon-theme.2"
  "conf-c++.1.0"
  "conf-cairo.1"
  "conf-findutils.1"
  "conf-gmp.5"
  "conf-graphviz.0.1"
  "conf-gtk3.18"
  "conf-gtksourceview3.0+2"
  "conf-pkg-config.4"
  "conf-python-2-7.1.2"
  "conf-zlib.1"
  "coq.8.18.0"
  "coq-core.8.18.0"
  "coq-lsp.0.1.9+8.18"
  "coq-serapi.8.18.0+0.18.3"
  "coq-stdlib.8.18.0"
  "coqide.8.18.0"
  "coqide-server.8.18.0"
  "cppo.1.8.0"
  "csexp.1.5.2"
  "ctypes.0.23.0"
  "dolmen.0.10"
  "dolmen_loop.0.10"
  "dolmen_type.0.10"
  "dune.3.19.1"
  "dune-build-info.3.19.1"
  "dune-configurator.3.19.1"
  "dune-private-libs.3.19.1"
  "dune-site.3.19.1"
  "dyn.3.19.1"
  "fmt.0.10.0"
  "fpath.0.7.3"
  "frama-c.30.0"
  "gen.1.1"
  "hmap.0.8.1"
  "integers.0.7.0"
  "jane-street-headers.v0.16.0"
  "jst-config.v0.16.0"
  "lablgtk3.3.1.5"
  "lablgtk3-sourceview3.3.1.5"
  "logs.0.8.0"
  "memprof-limits.0.2.1"
  "menhir.20240715"
  "menhirCST.20240715"
  "menhirLib.20240715"
  "menhirSdk.20240715"
  "num.1.6"
  "ocaml.4.14.0"
  "ocaml-base-compiler.4.14.0"
  "ocaml-compiler-libs.v0.12.4"
  "ocaml-config.2"
  "ocaml-options-vanilla.1"
  "ocaml-syntax-shims.1.0.0"
  "ocamlbuild.0.16.1"
  "ocamlfind.1.9.6"
  "ocamlgraph.2.2.0"
  "ocplib-simplex.0.5.1"
  "ordering.3.19.1"
  "parsexp.v0.16.0"
  "pp.2.0.0"
  "pp_loc.2.1.0"
  "ppx_assert.v0.16.0"
  "ppx_base.v0.16.0"
  "ppx_blob.0.9.0"
  "ppx_cold.v0.16.0"
  "ppx_compare.v0.16.0"
  "ppx_derivers.1.2.1"
  "ppx_deriving.5.2.1"
  "ppx_deriving_yaml.0.4.0"
  "ppx_deriving_yojson.3.9.1"
  "ppx_enumerate.v0.16.0"
  "ppx_globalize.v0.16.0"
  "ppx_hash.v0.16.0"
  "ppx_here.v0.16.0"
  "ppx_import.1.11.0"
  "ppx_inline_test.v0.16.1"
  "ppx_optcomp.v0.16.0"
  "ppx_sexp_conv.v0.16.0"
  "ppxlib.0.35.0"
  "psmt2-frontend.0.4.0"
  "result.1.5"
  "rresult.0.7.0"
  "seq.base"
  "sexplib.v0.16.0"
  "sexplib0.v0.16.0"
  "spelll.0.4"
  "stdio.v0.16.0"
  "stdlib-shims.0.3.0"
  "stdune.3.19.1"
  "stringext.1.6.0"
  "time_now.v0.16.0"
  "topkg.1.0.8"
  "unionFind.20220122"
  "uri.4.4.0"
  "uutf.1.0.4"
  "why3.1.7.1"
  "why3-coq.1.7.1"
  "yaml.3.2.0"
  "yojson.3.0.0"
  "z3.4.8.5"
  "zarith.1.14"
]